# contract-wasms

./: Makefile  README.md  claude.md  find_event_1679.sh  find_rsver_1910_results.txt
.github/workflows/: fetch-buckets-contracts.yml
.scripts/: count_instances.sh  count_instances_per_wasm.sh  find_constructor_events.sh  find_error_name_collision_with_sdk.sh  find_event_1679.sh  find_memory_grow.sh  find_rem_euclid.sh  find_rsver_1910.sh  find_sdk_version.sh  find_sep50_nft_contracts_token_id_types.sh  map_instances.sh
.scripts/dupe-code-analysis/: Cargo.toml
.scripts/dupe-section-analysis/: Cargo.toml
.scripts/dupe-specs-analysis/: Cargo.toml
.scripts/extract-meta/: Cargo.toml
.scripts/extract-specs/: Cargo.toml
.scripts/get-contracts-from-buckets/: Cargo.toml
.scripts/get-contracts-from-buckets/src/: main.rs
.scripts/optimize-analysis/: Cargo.toml
.scripts/optimize-analysis/src/: main.rs
.scripts/spec-analysis/: Cargo.toml
.scripts/wikigen/: Cargo.toml
analysis/: count_instances_per_wasm.csv  dupe-code.csv  dupe-sections.csv  dupe-specs.csv  find_constructor_events_results.csv  find_error_name_collision_with_sdk_results.csv  find_event_1679_results.csv  find_memory_grow_results.csv  find_rem_euclid_results.csv  find_rsver_1910_results.txt  find_sdk_version_results.csv  find_sep50_nft_contracts_token_id_types_results.csv  host-functions-imported.csv  host-functions-not-imported.csv  map_instances.csv  optimize.csv  spec.csv
