[package]
name = "wikigen"
version = "0.1.0"
edition = "2024"

[dependencies]
soroban-spec-rust = { git = "https://github.com/stellar/rs-soroban-sdk", tag = "v26.0.0-rc.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
soroban-spec = "26.0.0-rc.1"
stellar-xdr = "26.0.0"
clap = { version = "4.0", features = ["derive"] }
tera = "1.19"
markdown = "1.0.0"
human_bytes = "0.4"
quote = "1.0.41"
